--- a/package.json
+++ b/package.json
@@ -47,8 +47,11 @@
     "lodash": "^4.17.11",
     "lusca": "^1.6.1",
     "mongoose": "^5.4.22",
+    "mongoose-unique-validator": "^2.0.2",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
+    "mysql": "^2.16.0",
+    "mysql2": "^1.6.5",
     "node-linkedin": "^0.5.6",
     "node-sass": "^4.11.0",
     "node-sass-middleware": "^0.11.0",
@@ -68,6 +71,8 @@
     "popper.js": "^1.15.0",
     "pug": "^2.0.3",
     "request": "^2.88.0",
+    "sequelize": "^5.2.12",
+    "sequelize-cli": "^5.4.0",
     "stripe": "^6.28.0",
     "tumblr.js": "^2.0.0",
     "twilio": "^3.30.0",
